worked on the user orers endpoint
